[gd_scene load_steps=9 format=2]

[ext_resource path="res://misc/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/xolonium/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/xolonium/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 214.0
margin_bottom = 500.0
mouse_filter = 0
size_flags_horizontal = 0

[node name="Title" type="Label" parent="Container/HBoxContainer"]
margin_right = 214.0
margin_bottom = 116.0
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Riot"

[node name="Grid" type="GridContainer" parent="Container/HBoxContainer"]
margin_top = 120.0
margin_right = 214.0
margin_bottom = 269.0
mouse_filter = 0

[node name="Host" type="Button" parent="Container/HBoxContainer/Grid"]
margin_right = 214.0
margin_bottom = 47.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Host"
align = 0

[node name="Join" type="Button" parent="Container/HBoxContainer/Grid"]
margin_top = 51.0
margin_right = 214.0
margin_bottom = 98.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Join"
align = 0

[node name="Quit" type="Button" parent="Container/HBoxContainer/Grid"]
margin_top = 102.0
margin_right = 214.0
margin_bottom = 149.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Container"]
margin_right = 924.0
margin_bottom = 500.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "v0.04
"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="JoinContainer" type="Control" parent="CenterContainer"]
visible = false
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer/JoinContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -100.0
margin_right = 212.0
margin_bottom = 100.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/JoinContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AddressContainer" type="VBoxContainer" parent="CenterContainer/JoinContainer/Panel/VBoxContainer"]
margin_right = 384.0
margin_bottom = 60.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/JoinContainer/Panel/VBoxContainer/AddressContainer"]
margin_right = 384.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Server Address"

[node name="Address" type="LineEdit" parent="CenterContainer/JoinContainer/Panel/VBoxContainer/AddressContainer"]
margin_top = 24.0
margin_right = 384.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
placeholder_text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortContainer" type="VBoxContainer" parent="CenterContainer/JoinContainer/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 124.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/JoinContainer/Panel/VBoxContainer/PortContainer"]
margin_right = 384.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Port"

[node name="Port" type="LineEdit" parent="CenterContainer/JoinContainer/Panel/VBoxContainer/PortContainer"]
margin_top = 24.0
margin_right = 384.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
placeholder_text = "3524"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="CenterContainer/JoinContainer/Panel/VBoxContainer"]
margin_top = 128.0
margin_right = 384.0
margin_bottom = 160.0
theme = ExtResource( 5 )
text = "Connect"

[connection signal="pressed" from="Container/HBoxContainer/Grid/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Container/HBoxContainer/Grid/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Container/HBoxContainer/Grid/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer/JoinContainer/Panel/VBoxContainer/Connect" to="." method="_on_Connect_pressed"]
